# Adv_ml_asgn1

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
data/processed/: submission.csv  submission1.csv  submission2.csv  submission3.csv  y_train.csv  y_val.csv
data/raw/: metadata.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/: freqenc.joblib  scaler.joblib  sm.joblib
notebooks/: Britto_Rohan-24610990-week1-random_forest.ipynb  Britto_Rohan-24610990-week2-multiple_algorithms.ipynb  Britto_Rohan-24610990-week3-adaboost_optimization.ipynb
reports/: Britto_Rohan-24610990-week1_random_forest.docx  Britto_Rohan-24610990-week2_multiple_algorithms.docx  Britto_Rohan-24610990-week3_adaboost_optimization.docx
src/models/: fit_predict_proba.joblib  functions.py
