[tool.poetry]
name = "adv-ml-asgn1"
version = "1.0"
description = "Advanced ML Assignment 1"
authors = ["Rohan Britto"]
readme = "README.md"
packages = [{include = "adv_ml_asgn1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
