[tool.poetry]
name = "adv-ml-asgn1"
version = "1.0"
description = "Advanced ML Assignment 1"
authors = ["Rohan Britto"]
readme = "README.md"
packages = [{include = "adv_ml_asgn1"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
jupyter = "^1.0.0"
scikit-learn = "1.3.0"
matplotlib = "^3.7.2"
imblearn = "^0.0"
feature-engine = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
